use .exe in examples and compile commands to make it easier for windows and linux users both

--- a/03-tips/02-makefiles/Makefile
+++ b/03-tips/02-makefiles/Makefile
@@ -22,7 +22,7 @@ CC = gcc
 CFLAGS = -Wall -Wextra -pedantic
 
 # Executable name
-TARGET = multifile_project.out
+TARGET = multifile_project.exe
 
 # Source files
 SRCS = main.c math_utils.c
